2008-10-01  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport.PropertyGrid.Editors/TextEditor.cs,
	  MonoDevelop.DesignerSupport.Projects/ProjectFileDescriptor.cs: Add
	  support for using property grid to set arbitrary build actions.

2008-09-25  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport/ClassOutlineTextEditorExtension.cs: Track
	  API, fix .ctor display formatting.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.mdp: Updated projects.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.DesignerSupport.Toolbox.ComponentSelectorDialog.cs:
	  Updated generated code.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport/BindingService.cs: Track api changes.

2008-09-10  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.DesignerSupport/ClassOutlineTextEditorExtension.cs:
	  Changed compilation unit/document meta information interface.

2008-09-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.Projects/ComponentNodeBuilder.cs: Moved
	  the extensible tree view to its own directory.

2008-08-22  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport.PropertyGrid/PropertyGridTree.cs: Make
	  property grid groups default to expanded.

2008-08-18  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport.PropertyGrid.Editors/TextEditor.cs: Add
	  support for standard values and exclusive values if the converter
	  supports/provides them. Supply an ITypeDescriptorContext to the
	  TypeConverter.
	* MonoDevelop.DesignerSupport.PropertyGrid.Editors/EnumerationEditorCell.cs:
	  Don't allow text caret, since the values are not editable.
	* MonoDevelop.DesignerSupport.PropertyGrid/PropertyEditorCell.cs:
	  Implement ITypeDescriptorContext on EditorSession, so that cell
	  editors can easily provide one to the TypeConverter.