@@ -44,11 +44,6 @@
 	</ExtensionPoint>
 	
 	<!-- Extensions -->
-
-	<Extension path = "/MonoDevelop/Core/Services">
-		<Class id    = "DesignerSupportService"
-		       class = "MonoDevelop.DesignerSupport.DesignerSupportService"/>
-	</Extension>
 	
 	<Extension path = "/MonoDevelop/DesignerSupport/PropertyProviders" extension-nodes="Class">
 		<Class class = "MonoDevelop.DesignerSupport.Projects.ProjectItemPropertyProvider"/>
