@@ -1,3 +1,9 @@
+2008-10-02  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.DesignerSupport.addin.xml,
+	  MonoDevelop.DesignerSupport/DesignerSupportService.cs: Use a simple
+	  lazy singleton instead of an IService.
+
 2008-10-01  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* MonoDevelop.DesignerSupport.PropertyGrid.Editors/TextEditor.cs,
